--- a/index.html
+++ b/index.html
@@ -3,246 +3,168 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Slides Manager</title>
+  <title>Quản lý thư mục slides</title>
   <style>
     :root{--gap:12px}
-    body{font-family:system-ui,Arial;padding:24px;max-width:1000px;margin:auto}
-    h1{margin:0 0 16px}
-    .section{margin:24px 0}
-    .card{border:1px solid #ddd;border-radius:12px;padding:16px}
-    .row{display:flex;gap:var(--gap);align-items:center;flex-wrap:wrap}
+    body{font-family:system-ui,Arial;padding:24px;max-width:1100px;margin:auto}
+    h1{margin:0 0 8px}
     .muted{color:#666}
-    button{padding:10px 16px;border:0;border-radius:10px;cursor:pointer}
+    .row{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
+    .card{border:1px solid #e5e5e5;border-radius:12px;padding:16px;margin:16px 0}
+    button{padding:9px 14px;border:0;border-radius:10px;cursor:pointer}
     input,button{font-size:15px}
-    .btn-primary{background:#111;color:#fff}
-    .btn-ghost{background:#f3f3f3}
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(180px,1fr));gap:var(--gap)}
-    .thumb{border:1px solid #ccc;border-radius:10px;padding:8px;display:flex;flex-direction:column;gap:8px;background:#fafafa}
-    .thumb img{width:100%;height:120px;object-fit:cover;border-radius:6px}
-    .thumb .meta{display:flex;gap:8px;align-items:center}
-    .thumb input[type="number"]{width:70px}
-    .thumb .del{margin-left:auto}
+    .btn{background:#f2f2f2}
+    .btn.primary{background:#111;color:#fff}
+    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:16px}
+    .tile{border:1px solid #ddd;border-radius:12px;padding:10px;background:#fff;display:flex;flex-direction:column;gap:8px}
+    .tile img{width:100%;height:150px;object-fit:cover;border-radius:8px;border:1px solid #eee}
+    .name{font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace;font-size:12px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+    .row-actions{display:flex;gap:8px;align-items:center}
+    .row-actions input[type="text"]{flex:1;min-width:0}
+    .topbar{display:flex;gap:12px;align-items:center;flex-wrap:wrap;justify-content:space-between}
+    .left{display:flex;gap:12px;align-items:center;flex-wrap:wrap}
+    .right{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+    .pill{background:#f6f6f6;border:1px solid #e7e7e7;border-radius:99px;padding:6px 10px}
     .ok{color:#0a9a00}.err{color:#b00020}
-    .list{list-style:none;margin:0;padding:0}
-    .item{display:flex;align-items:center;gap:10px;padding:8px;border:1px solid #e5e5e5;border-radius:10px;margin-bottom:8px;background:#fff}
-    .handle{cursor:grab;font-size:18px}
-    .src{flex:1;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-    .item img{width:60px;height:40px;object-fit:cover;border-radius:6px;border:1px solid #ddd}
-    .right{display:flex;gap:8px;align-items:center}
-    .inline-input{width:70px}
-    .divider{height:1px;background:#eee;margin:16px 0}
-    .hint{font-size:13px;color:#666}
-    .toggle{display:flex;align-items:center;gap:8px}
-    .api{display:flex;gap:8px;align-items:center;margin:8px 0}
-    .api input{min-width:360px}
   </style>
 </head>
 <body>
-  <h1>Quản lý slides (slides/ & manifest.json)</h1>
-
-  <div class="api">
-    <label>API BASE:
-      <input id="apiBaseInput" type="text" placeholder="https://pic-flame.vercel.app">
-    </label>
-    <button id="applyApi" class="btn-ghost">Dùng API này</button>
-    <span class="hint">Có thể đổi tạm bằng ?api=https://...</span>
+  <div class="topbar">
+    <div class="left">
+      <h1>Quản lý <code>slides/</code></h1>
+      <span id="count" class="pill muted">0 ảnh</span>
+    </div>
+    <div class="right">
+      <button id="btnRefresh" class="btn">↻ Tải lại</button>
+      <span id="msgTop" class="muted"></span>
+    </div>
   </div>
 
-  <!-- UPLOAD -->
-  <div class="section card">
-    <h2 style="margin-top:0">1) Thêm ảnh mới</h2>
+  <div class="card">
     <div class="row">
       <input id="files" type="file" accept="image/*" multiple />
-      <label>Duration mặc định (giây): <input type="number" id="defaultDuration" value="8" min="1"></label>
-      <button class="btn-primary" id="btnUpload">Upload & Append</button>
+      <button id="btnUpload" class="btn primary">⬆️ Tải ảnh lên</button>
       <span id="msgUp" class="muted"></span>
     </div>
-    <div class="hint">Chọn nhiều ảnh một lúc. Có thể sửa duration/alt từng ảnh ngay dưới.</div>
-    <div class="grid" id="preview"></div>
+    <div class="muted" style="font-size:13px">
+      Tên file giữ nguyên (được làm sạch ký tự). Nếu trùng sẽ tự thêm hậu tố <code>-1</code>, <code>-2</code> …
+    </div>
   </div>
 
-  <!-- MANIFEST -->
-  <div class="section card">
-    <h2 style="margin-top:0">2) Manifest hiện tại</h2>
-    <div class="row">
-      <button class="btn-ghost" id="btnReload">Tải lại</button>
-      <button class="btn-primary" id="btnSave">Lưu manifest</button>
-      <label class="toggle">
-        <input type="checkbox" id="deleteFilesToggle" />
-        Khi xóa khỏi manifest, <b>xóa cả file</b> trong repo
-      </label>
-      <span id="msgMf" class="muted"></span>
-    </div>
-    <div class="divider"></div>
-    <ul id="manifestList" class="list"></ul>
-    <div class="hint">Kéo-thả bằng biểu tượng ☰ để đổi thứ tự. Có thể sửa duration/alt trực tiếp.</div>
-  </div>
+  <div id="list" class="grid"></div>
 
 <script>
-  // === CẤU HÌNH API BASE KHI CHẠY TRÊN GITHUB PAGES ===
-  const API_BASE_DEFAULT = 'https://pic-flame.vercel.app';
-  let API_BASE = new URLSearchParams(location.search).get('api') || localStorage.getItem('API_BASE') || API_BASE_DEFAULT;
-  const apiInput = document.getElementById('apiBaseInput');
-  apiInput.value = API_BASE;
-  document.getElementById('applyApi').onclick = () => {
-    API_BASE = apiInput.value.trim();
-    localStorage.setItem('API_BASE', API_BASE);
-    alert('Đã đổi API BASE thành: ' + API_BASE);
-  };
-
   const $ = s => document.querySelector(s);
-  const $$ = s => Array.from(document.querySelectorAll(s));
-
-  // ==== PREVIEW UPLOAD PANEL ====
-  const filesInput = $('#files');
-  const preview = $('#preview');
+  const listEl = $('#list');
+  const countEl = $('#count');
+  const msgTop = $('#msgTop');
   const msgUp = $('#msgUp');
 
-  function clearPreview(){ preview.innerHTML = ''; }
-  filesInput.addEventListener('change', () => {
-    clearPreview();
-    const defDur = +$('#defaultDuration').value || 8;
-    for (const file of filesInput.files) {
-      const url = URL.createObjectURL(file);
-      const div = document.createElement('div');
-      div.className = 'thumb';
-      div.innerHTML = `
-        <img src="${url}" alt="">
-        <div class="meta">
-          <label>Dur <input type="number" value="${defDur}" min="1" class="dur"></label>
-          <input type="text" class="alt" placeholder="alt (tuỳ chọn)" />
-          <button class="del">Xóa</button>
+  async function api(path, opt={}) {
+    const res = await fetch(path, opt);
+    const data = await res.json().catch(()=> ({}));
+    if (!res.ok) throw new Error(data.error || res.statusText);
+    return data;
+  }
+
+  function tileTemplate(item){
+    const imgUrl = item.download_url || item.raw_url || item.url;
+    const name = item.name;
+    return `
+      <div class="tile" data-path="${item.path}">
+        <img src="${imgUrl}" alt="${name}">
+        <div class="name" title="${item.path}">${name}</div>
+        <div class="row-actions">
+          <input type="text" class="newname" value="${name}">
+          <button class="btn btn-rename">Đổi tên</button>
+          <button class="btn btn-del">Xóa</button>
         </div>
-      `;
-      div.querySelector('.del').onclick = () => {
-        const arr = Array.from(filesInput.files).filter(f => f !== file);
-        const dt = new DataTransfer();
-        arr.forEach(f => dt.items.add(f));
-        filesInput.files = dt.files;
-        div.remove();
-      };
-      preview.appendChild(div);
+      </div>
+    `;
+  }
+
+  async function load() {
+    msgTop.textContent = 'Đang tải...';
+    try{
+      const data = await api('/api/files');
+      listEl.innerHTML = data.items.map(tileTemplate).join('');
+      countEl.textContent = `${data.items.length} ảnh`;
+      msgTop.textContent = '';
+      bindTileEvents();
+    }catch(e){
+      msgTop.textContent = '✖ ' + e.message;
+      msgTop.className = 'err';
     }
-  });
+  }
+
+  function bindTileEvents(){
+    document.querySelectorAll('.tile').forEach(tile => {
+      const path = tile.dataset.path;
+      const btnDel = tile.querySelector('.btn-del');
+      const btnRename = tile.querySelector('.btn-rename');
+      const input = tile.querySelector('.newname');
+
+      btnDel.onclick = async () => {
+        if (!confirm('Xóa file này khỏi slides/?')) return;
+        btnDel.disabled = true;
+        try{
+          const res = await api('/api/files', {
+            method:'DELETE',
+            headers:{'Content-Type':'application/json'},
+            body: JSON.stringify({ path })
+          });
+          msgTop.textContent = `✔ Đã xóa. Manifest hiện ${res.manifestCount} mục`;
+          msgTop.className='ok';
+          await load();
+        }catch(e){
+          alert(e.message);
+        }finally{
+          btnDel.disabled = false;
+        }
+      };
+
+      btnRename.onclick = async () => {
+        const newName = input.value.trim();
+        if (!newName || newName === path.split('/').pop()) return;
+        btnRename.disabled = true;
+        try{
+          const res = await api('/api/files', {
+            method:'PUT',
+            headers:{'Content-Type':'application/json'},
+            body: JSON.stringify({ old_path: path, new_name: newName })
+          });
+          msgTop.textContent = `✔ Đã đổi tên. Manifest hiện ${res.manifestCount} mục`;
+          msgTop.className='ok';
+          await load();
+        }catch(e){
+          alert(e.message);
+        }finally{
+          btnRename.disabled = false;
+        }
+      };
+    });
+  }
 
   $('#btnUpload').onclick = async () => {
-    msgUp.textContent = '';
-    const files = filesInput.files;
-    if (!files || files.length === 0) { msgUp.textContent='Chưa chọn ảnh'; msgUp.className='err'; return; }
-
+    const files = $('#files').files;
+    if(!files || !files.length){ msgUp.textContent='Chưa chọn ảnh'; msgUp.className='err'; return; }
+    msgUp.textContent = 'Đang tải...'; msgUp.className='muted';
     const fd = new FormData();
-    const thumbs = Array.from(preview.children);
-    Array.from(files).forEach((f) => fd.append('images', f));
-    thumbs.forEach(t => fd.append('durations', t.querySelector('.dur').value || '8'));
-    thumbs.forEach(t => fd.append('alts', t.querySelector('.alt').value || ''));
-
+    Array.from(files).forEach(f => fd.append('images', f));
     try{
-      const res = await fetch(`${API_BASE}/api/add-slides`, { method:'POST', body: fd, mode:'cors' });
-      const data = await res.json();
-      if(!res.ok) throw new Error(data.error || res.statusText);
-      msgUp.textContent = `✔ Đã thêm ${data.added} ảnh (commit ${data.commitSha.slice(0,7)})`;
-      msgUp.className = 'ok';
-      filesInput.value = '';
-      clearPreview();
-      await loadManifest();
+      const res = await api('/api/files', { method:'POST', body: fd });
+      msgUp.textContent = `✔ Đã thêm ${res.added} ảnh (manifest: ${res.manifestCount} mục)`;
+      msgUp.className='ok';
+      $('#files').value='';
+      await load();
     }catch(e){
-      msgUp.textContent = '✖ ' + e.message;
-      msgUp.className = 'err';
+      msgUp.textContent = '✖ ' + e.message; msgUp.className='err';
     }
   };
 
-  // ==== MANIFEST LIST ====
-  const list = $('#manifestList');
-  const msgMf = $('#msgMf');
+  $('#btnRefresh').onclick = load;
 
-  function renderManifest(items){
-    list.innerHTML = '';
-    items.forEach((it, idx) => {
-      const li = document.createElement('li');
-      li.className = 'item';
-      li.draggable = true;
-      li.dataset.index = idx;
-      li.innerHTML = `
-        <span class="handle" title="Kéo để sắp xếp">☰</span>
-        <img src="${it.src}" alt="">
-        <div class="src" title="${it.src}">${it.src}</div>
-        <div class="right">
-          <label>Dur <input class="inline-input dur" type="number" min="1" value="${it.duration ?? ''}" placeholder="-"></label>
-          <input class="inline-input alt" type="text" value="${it.alt ?? ''}" placeholder="alt">
-          <button class="btn-ghost del">Xóa</button>
-        </div>
-      `;
-      li.querySelector('.del').onclick = () => { li.remove(); };
-      li.addEventListener('dragstart', ev => {
-        ev.dataTransfer.setData('text/plain', li.dataset.index);
-        li.classList.add('dragging');
-      });
-      li.addEventListener('dragend', () => {
-        $$('.item').forEach((el,i)=> el.dataset.index = i);
-        $$('.item').forEach(x => x.classList.remove('dragging'));
-      });
-      li.addEventListener('dragover', ev => {
-        ev.preventDefault();
-        const dragging = $('.item.dragging');
-        if (!dragging || dragging === li) return;
-        const rect = li.getBoundingClientRect();
-        const before = (ev.clientY - rect.top) < (rect.height / 2);
-        list.insertBefore(dragging, before ? li : li.nextSibling);
-      });
-      list.appendChild(li);
-    });
-  }
-
-  async function loadManifest(){
-    msgMf.textContent = 'Đang tải manifest...';
-    msgMf.className='muted';
-    try {
-      const res = await fetch(`${API_BASE}/api/manifest`, { mode:'cors' });
-      const data = await res.json();
-      if (!res.ok) throw new Error(data.error || res.statusText);
-      window.__manifestOriginal = data.items;
-      renderManifest(structuredClone(window.__manifestOriginal));
-      msgMf.textContent = `Đã tải ${data.items.length} mục`;
-      msgMf.className='muted';
-    } catch (e) {
-      msgMf.textContent = '✖ '+e.message;
-      msgMf.className='err';
-    }
-  }
-
-  $('#btnReload').onclick = loadManifest;
-
-  $('#btnSave').onclick = async () => {
-    const items = $$('.item').map(li => {
-      const src = li.querySelector('.src').getAttribute('title') || li.querySelector('.src').textContent.trim();
-      const durVal = li.querySelector('.dur').value.trim();
-      const altVal = li.querySelector('.alt').value.trim();
-      const obj = { src };
-      if (durVal) obj.duration = +durVal;
-      if (altVal) obj.alt = altVal;
-      return obj;
-    });
-    const deleteFiles = $('#deleteFilesToggle').checked;
-
-    try{
-      msgMf.textContent = 'Đang lưu...'; msgMf.className='muted';
-      const res = await fetch(`${API_BASE}/api/manifest`, {
-        method:'PUT',
-        headers: {'Content-Type':'application/json'},
-        body: JSON.stringify({ items, delete_files: deleteFiles }),
-        mode:'cors'
-      });
-      const data = await res.json();
-      if(!res.ok) throw new Error(data.error || res.statusText);
-      msgMf.textContent = `✔ Đã lưu (commit ${data.commitSha.slice(0,7)}). Xóa ${data.removed} mục khỏi manifest${deleteFiles?`, xóa ${data.deletedFiles} file trên repo`:''}.`;
-      msgMf.className='ok';
-      window.__manifestOriginal = items;
-    }catch(e){
-      msgMf.textContent = '✖ '+e.message; msgMf.className='err';
-    }
-  };
-
-  loadManifest();
+  load();
 </script>
 </body>
 </html>
